# ksight

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  SECURITY.md
.github/workflows/: ci.yml
docs/: README.md  demo-trimmed.cast  demo.cast
ksight-agent/: Cargo.toml  build.rs
ksight-agent/src/: lib.rs  main.rs
ksight-common/: Cargo.toml
ksight-common/src/: lib.rs
ksight-ebpf/: Cargo.toml  build.rs
ksight-ebpf/src/: main.rs  vmlinux.rs
ksight-tui/: Cargo.toml
ksight-tui/examples/: demo.rs
ksight-tui/src/: lib.rs
